--- a/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
+++ b/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "## How can I tell if the AOP data I've downloaded is up to date?\n",
     "\n",
-    "There are a few ways to check if and what AOP data have been updated since you last downloaded the data, both on the website, and programmatically using functionality built into the AOP download functions. On the website, you can check the issue logs and their resolution, and you can also check the Release pages for a complete summary of what has been changed between the past release and the current one. For example ... This tutorial will explain some of the options to check if data has been modified compared to your local version.\n",
+    "There are a few ways to check if and what AOP data have been updated since you last downloaded the data, both on the website, and programmatically using functionality built into the AOP download functions. On the website, you can check the issue logs and their resolution, and you can also check the Release pages for a complete summary of what has been changed between the past release and the current one; for example <a href=\"https://www.neonscience.org/data-samples/data-management/data-revisions-releases/release-2025\" target=\"_blank\">Release 2025</a>. This tutorial will demonstrate some of the programmitc options to check if published AOP data has been modified compared to your local version.\n",
     "\n",
     "\n",
     "<div id=\"ds-objectives\" markdown=\"1\">\n",
@@ -87,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b42a3965-a959-4621-a16d-e730926972bd",
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "import os\n",
-    "from neonutilities import by_tile_aop, by_file_aop, list_available_dates"
+    "from neonutilities import by_tile_aop, by_file_aop, list_available_dates, get_citation"
    ]
   },
   {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5ca105c2-0848-45da-9a59-f184d0eabb2a",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a87fca39-5427-4011-a0e2-2f18a065793d",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "30ee6c15-c08e-432b-bff1-3c12093e372c",
    "metadata": {},
    "outputs": [
@@ -288,18 +288,16 @@
    "source": [
     "The required inputs for this function are the data product id (`dpid`), site id (`site`) and year (`year`). Note that there are a number of additional optional inputs, which we will explain more in detail. Some ones that we recommend paying attention to are:\n",
     "\n",
-    "- `token`: \n",
+    "- `token`: Your API token from `data.neonscience.org` user account. Defaults to None. We highly encourage using a token when downloading NEON data. See <a href=\"https://www.neonscience.org/resources/learning-hub/tutorials/neon-api-tokens-tutorial\" target=\"_blank\">Using an API Token when Accessing NEON Data with neonUtilities</a>.\n",
     "- `include_provisional`: this is the only way you can download provisional data. If you've used the `list_available_dates` function and you want to download data from a year where it is only available provisionally, you must set this option to True in order to download any data. You will see a warning if no data are found. We will show this in the example below.\n",
-    "- `savepath`: this is the path where data will be downloaded. We recommend setting this to somewhere close to you \n",
+    "- `savepath`: this is the path where data will be downloaded. We recommend setting this to somewhere close to the root folder to avoid very long paths for AOP data. \n",
     "\n",
-    "In the latest version of Python neonutilities there are two new optional inputs, which we will go into in more detail later on in the tutorial. For now just know that these options provide functionality to avoid re-downloading identical data if you have already downloaded it for a site and data product.\n",
-    "- `skip_if_exists`\n",
-    "- `overwrite`"
+    "In the most recent version of Python neonutilities (1.2.0), there are two new optional inputs: `skip_if_exists` and `overwrite`, which we will go into in more detail later on in the tutorial. For now just know that these options provide functionality to avoid re-downloading identical data if you have already downloaded it for a site and data product."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b8f0a0f7-eb65-48be-bf42-eee166f817b2",
    "metadata": {},
    "outputs": [],
@@ -309,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3c49fc9b-03f7-434d-8f83-7b7fc1ac3e06",
    "metadata": {},
    "outputs": [
@@ -334,12 +332,12 @@
    "id": "d1ad34f8-19b1-43eb-9d5f-1e3145557821",
    "metadata": {},
    "source": [
-    "Now let's set the include_provisional to True to see what happens:"
+    "Now let's set `include_provisional=True` to see what happens. Select `y` when prompted to download the data (first ensuring you have enough space)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7f22ea01-33a0-4288-a459-6d810cc89658",
    "metadata": {},
    "outputs": [
@@ -354,16 +352,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Continuing will download 32 NEON data files totaling approximately 342.5 MB. Do you want to proceed? (y/n)  y\n"
+      "Continuing will download 32 NEON data files totaling approximately 342.5 MB. Do you want to proceed? (y/n)  n\n"
      ]
     },
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading 32 NEON data files totaling approximately 342.5 MB\n",
-      "\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 32/32 [00:54<00:00,  1.69s/it]\n"
+      "Download halted.\n"
      ]
     }
    ],
@@ -387,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "34219b50-5970-4fff-aa88-ee95c3e2c42d",
    "metadata": {},
    "outputs": [],
@@ -413,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "cac5c278-b21f-416d-a163-87a103565062",
    "metadata": {},
    "outputs": [],
@@ -439,72 +435,33 @@
     "            for file in files_to_display:\n",
     "                print(f\"  - {file}\")\n",
     "            if len(sorted_filenames) > 5:\n",
-    "                print(f\"  ... ({len(sorted_filenames) - 5} more files not shown)\")\n",
-    "        # else:\n",
-    "        #     print(\"  No files in this directory.\")"
+    "                print(f\"  ... ({len(sorted_filenames) - 5} more files not shown)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2464383-54ab-47fc-96b5-5f6cd82f9917",
+   "metadata": {},
+   "source": [
+    "Use these functions to see what we've downloaded:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "2cb8a923-99f5-4872-92b9-25a170bc99eb",
+   "execution_count": null,
+   "id": "b4448fd5-5a35-4af8-a7b0-774f55ddedcb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['C:\\\\NEON_Data\\\\DP3.30015.001',\n",
-       " 'C:\\\\NEON_Data\\\\DP3.30015.001\\\\neon-aop-provisional-products\\\\2025\\\\FullSite\\\\D16\\\\2025_MCRA_5\\\\L3\\\\DiscreteLidar\\\\CanopyHeightModelGtif',\n",
-       " 'C:\\\\NEON_Data\\\\DP3.30015.001\\\\neon-aop-provisional-products\\\\2025\\\\FullSite\\\\D16\\\\2025_MCRA_5\\\\Metadata\\\\DiscreteLidar\\\\Reports',\n",
-       " 'C:\\\\NEON_Data\\\\DP3.30015.001\\\\neon-aop-provisional-products\\\\2025\\\\FullSite\\\\D16\\\\2025_MCRA_5\\\\Metadata\\\\DiscreteLidar\\\\TileBoundary',\n",
-       " 'C:\\\\NEON_Data\\\\DP3.30015.001\\\\neon-publication\\\\NEON.DOM.SITE.DP3.30015.001\\\\MCRA\\\\20250801T000000--20250901T000000\\\\basic']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_folders_with_files(data_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "6b99f03b-e683-40ee-8844-7771b2ea2a02",
+   "execution_count": null,
+   "id": "a25002f9-7798-4ef5-af83-5344477d0800",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Directory: C:\\NEON_Data\\DP3.30015.001\n",
-      "  - citation_DP3.30015.001_PROVISIONAL.txt\n",
-      "  - issueLog_DP3.30015.001.csv\n",
-      "\n",
-      "Directory: C:\\NEON_Data\\DP3.30015.001\\neon-aop-provisional-products\\2025\\FullSite\\D16\\2025_MCRA_5\\L3\\DiscreteLidar\\CanopyHeightModelGtif\n",
-      "  - NEON_D16_MCRA_DP3_565000_4900000_CHM.tif\n",
-      "  - NEON_D16_MCRA_DP3_565000_4901000_CHM.tif\n",
-      "  - NEON_D16_MCRA_DP3_565000_4902000_CHM.tif\n",
-      "  - NEON_D16_MCRA_DP3_565000_4903000_CHM.tif\n",
-      "  - NEON_D16_MCRA_DP3_565000_4904000_CHM.tif\n",
-      "  ... (22 more files not shown)\n",
-      "\n",
-      "Directory: C:\\NEON_Data\\DP3.30015.001\\neon-aop-provisional-products\\2025\\FullSite\\D16\\2025_MCRA_5\\Metadata\\DiscreteLidar\\Reports\n",
-      "  - 2025080216_P3C1_SBET_QAQC.pdf\n",
-      "  - 2025_MCRA_5_L1_discrete_lidar_qa.html\n",
-      "  - 2025_MCRA_5_L3_discrete_lidar_qa.html\n",
-      "\n",
-      "Directory: C:\\NEON_Data\\DP3.30015.001\\neon-aop-provisional-products\\2025\\FullSite\\D16\\2025_MCRA_5\\Metadata\\DiscreteLidar\\TileBoundary\n",
-      "  - 2025_MCRA_5_TileBoundary.zip\n",
-      "\n",
-      "Directory: C:\\NEON_Data\\DP3.30015.001\\neon-publication\\NEON.DOM.SITE.DP3.30015.001\\MCRA\\20250801T000000--20250901T000000\\basic\n",
-      "  - NEON.D16.MCRA.DP3.30015.001.readme.20250926T050145Z.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "display_files_in_subdirectories(data_dir)"
    ]
@@ -521,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "b2b2392a-2703-436c-be96-6d0ca69ee62a",
    "metadata": {},
    "outputs": [
@@ -549,11 +506,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86bea3b6-1a1d-4769-85e1-dbfa918e0298",
+   "cell_type": "markdown",
+   "id": "a46bcb31-260a-4a01-95d4-7ca5c196a9b4",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Note that there is no DOI since the data are provisional. \n",
     "We can also get the citation information from the `neonutilities` `get_citation` function as follows:"
@@ -561,17 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "9c39a649-6881-4224-aba6-7ed291abc077",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from neonutilities import get_citation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "3544a220-8c21-4420-b9bf-b82e8b962aef",
    "metadata": {},
    "outputs": [
@@ -581,7 +526,7 @@
        "'@misc{DP3.30015.001/provisional,\\n  doi = {},\\n  url = {https://data.neonscience.org/data-products/DP3.30015.001},\\n  author = {{National Ecological Observatory Network (NEON)}},\\n  language = {en},\\n  title = {Ecosystem structure (DP3.30015.001)},\\n  publisher = {National Ecological Observatory Network (NEON)},\\n  year = {2025}\\n}'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "bd1635d6-2965-4a4b-bc2f-5965d5f36217",
    "metadata": {},
    "outputs": [
@@ -619,7 +564,7 @@
        " '}']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,32 +578,17 @@
    "id": "a6d96155-2fa8-41a1-81a6-b23140826b6d",
    "metadata": {},
    "source": [
-    "Let's also download data that has been released. For this example, we'll download the CHM data from 2023. In this case, as we saw at the start, the data have been released as part of `RELEASE-2025`, so we do not need to select `include_provisional=True` (although it won't hurt)."
+    "Let's also download data that has been released. For this example, we'll download the CHM data from 2023. In this case, as we saw at the start, the data have been released as part of `RELEASE-2025`, so we do not need to select `include_provisional=True` (although it won't hurt).\n",
+    "\n",
+    "We can re-run the `get_folders_with_files` function to see the new data that has been downloaded."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "17b1f9a0-1910-41d5-ba9b-e6518e743754",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Continuing will download 124 NEON data files totaling approximately 94.3 MB. Do you want to proceed? (y/n)  y\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading 124 NEON data files totaling approximately 94.3 MB\n",
-      "\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 124/124 [00:47<00:00,  2.63it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "by_file_aop(dpid='DP3.30015.001',\n",
     "            site='MCRA',\n",
@@ -667,16 +597,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "056f432a-1edd-4490-b8a8-3f990ec6063e",
-   "metadata": {},
-   "source": [
-    "We can re-run the `get_folders_with_files` function to see the new data that has been downloaded."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "e071d3cd-110f-469a-8740-53cc486c0ff7",
    "metadata": {},
    "outputs": [
@@ -695,7 +617,7 @@
        " 'C:\\\\NEON_Data\\\\DP3.30015.001\\\\neon-publication\\\\release\\\\tag\\\\RELEASE-2025\\\\NEON.DOM.SITE.DP3.30015.001\\\\MCRA\\\\20230701T000000--20230801T000000\\\\basic']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "id": "b713d5ff-be4a-4bdc-82f7-521b9a8cec50",
    "metadata": {},
    "outputs": [
@@ -789,17 +711,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "id": "38366f34-5096-4e08-bd9a-732b7e9c650a",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Continuing will download 124 NEON data files totaling approximately 94.3 MB. Do you want to proceed? (y/n)  y\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -807,7 +722,7 @@
       "Found 124 NEON data files totaling approximately 94.3 MB.\n",
       "Files in savepath will be checked and skipped if they exist and match the latest version.\n",
       "Downloading README file\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  2.64it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  3.78it/s]\n",
       "All files already exist locally and match the latest available data. Skipping download.\n"
      ]
     }
@@ -835,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "id": "49cb8240-3619-47ff-8f81-348ae07dc868",
    "metadata": {},
    "outputs": [],
@@ -855,12 +770,12 @@
    "id": "eb50506e-638b-4c04-9a01-01d433f0f41b",
    "metadata": {},
    "source": [
-    "Now that we've modified some of the local files, let's try re-downloading using `skip_if_exists`."
+    "Now that we've modified some of the local files, let's try re-downloading using `skip_if_exists`. Select `n` when prompted."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "id": "43d2277e-365b-40aa-9cda-90a33c370b67",
    "metadata": {},
    "outputs": [
@@ -871,10 +786,10 @@
       "Found 124 NEON data files totaling approximately 94.3 MB.\n",
       "Files in savepath will be checked and skipped if they exist and match the latest version.\n",
       "Downloading README file\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  6.07it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  8.56it/s]\n",
       "The following files will be downloaded (they do not already exist locally):\n",
       "  NEON_D16_MCRA_DP3_565000_4900000_CHM.tif\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.65it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  2.14it/s]\n",
       "The remainder of the files in savepath will not be downloaded. They already exist locally and match the latest available data.\n",
       "The following files exist locally but have a different checksum than the remote files:\n",
       "  NEON_D16_MCRA_DP3_565000_4901000_CHM.tif\n"
@@ -916,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "id": "4b72d91d-99e2-4991-bc1f-51d00c996959",
    "metadata": {},
    "outputs": [
@@ -927,7 +842,7 @@
       "Found 124 NEON data files totaling approximately 94.3 MB.\n",
       "Files in savepath will be checked and skipped if they exist and match the latest version.\n",
       "Downloading README file\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  4.02it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  6.46it/s]\n",
       "The following files exist locally but have a different checksum than the remote files:\n",
       "  NEON_D16_MCRA_DP3_565000_4901000_CHM.tif\n",
       "Skipped overwriting files with mismatched checksums.\n"
