more minor cleanup

--- a/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
+++ b/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "## Additional Resources\n",
     "\n",
-    "* NEON <a href=\"http://data.neonscience.org\" target=\"_blank\"> NEON Data Portal </a>\n",
+    "* <a href=\"http://data.neonscience.org\" target=\"_blank\"> NEON Data Portal </a>\n",
     "* <a href=\"https://www.neonscience.org/data-samples/data-management/data-revisions-releases\" target=\"_blank\">Understanding Releases and Provisional Data</a>\n",
     "* <a href=\"https://www.neonscience.org/data-samples/data-management/data-revisions-releases\" target=\"_blank\">Data Product Revisions and Releases</a>\n",
     "* <a href=\"https://neon-utilities-python.readthedocs.io/en/stable/\" target=\"_blank\">neonutilities Read the Docs</a> \n",
@@ -288,11 +288,13 @@
    "source": [
     "The required inputs for this function are the data product id (`dpid`), site id (`site`) and year (`year`). Note that there are a number of additional optional inputs, which we will explain more in detail. Some ones that we recommend paying attention to are:\n",
     "\n",
-    "- `token`: Your API token from `data.neonscience.org` user account. Defaults to None. We highly encourage using a token when downloading NEON data. See <a href=\"https://www.neonscience.org/resources/learning-hub/tutorials/neon-api-tokens-tutorial\" target=\"_blank\">Using an API Token when Accessing NEON Data with neonUtilities</a>.\n",
-    "- `include_provisional`: this is the only way you can download provisional data. If you've used the `list_available_dates` function and you want to download data from a year where it is only available provisionally, you must set this option to True in order to download any data. You will see a warning if no data are found. We will show this in the example below.\n",
-    "- `savepath`: this is the path where data will be downloaded. We recommend setting this to somewhere close to the root folder to avoid very long paths for AOP data. \n",
+    "- `token`: Your API token from your NEON user account (on data.neonscience.org). Currently defaults to None, but we highly encourage using a token when downloading NEON data. See <a href=\"https://www.neonscience.org/resources/learning-hub/tutorials/neon-api-tokens-tutorial\" target=\"_blank\">Using an API Token when Accessing NEON Data with neonUtilities</a> for more details on the benefits of tokens and how to use them.\n",
+    "- `include_provisional`: setting this to `True` is the only way you can download provisional data. If you've used the `list_available_dates` function and you want to download data from a year where it is only available provisionally, you must set this option to True in order to download any data. You will see a warning if no data are found. We will show this in the example below.\n",
+    "- `savepath`: this is the path where data will be downloaded. We recommend setting this to somewhere close to the root folder to avoid very long paths for AOP data. Windows systems can have path length limitations (unless you change them) and if the path is too long you may see a warning or error.\n",
     "\n",
-    "In the most recent version of Python neonutilities (1.2.0), there are two new optional inputs: `skip_if_exists` and `overwrite`, which we will go into in more detail later on in the tutorial. For now just know that these options provide functionality to avoid re-downloading identical data if you have already downloaded it for a site and data product."
+    "In the most recent version of Python `neonutilities` (1.2.0, released in October 2025), there are two new optional inputs to the `by_file_aop` and `by_tile_aop` functions: `skip_if_exists` and `overwrite`. We will go over these options in more detail towards the end of this tutorial. For now, just know that these options provide functionality to avoid re-downloading identical data.\n",
+    "\n",
+    "Set the data directory, where data will be downloaded. Make sure this is a path that works on your system and has sufficient space for downloading data."
    ]
   },
   {
@@ -332,7 +334,7 @@
    "id": "d1ad34f8-19b1-43eb-9d5f-1e3145557821",
    "metadata": {},
    "source": [
-    "Now let's set `include_provisional=True` to see what happens. Select `y` when prompted to download the data (first ensuring you have enough space)."
+    "Now let's set `include_provisional=True` to see what happens. Select \"y\" when prompted to download the data (first ensuring you have enough space)."
    ]
   },
   {
