more minor cleanup

--- a/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
+++ b/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "## How can I tell if the AOP data I've downloaded is up to date?\n",
     "\n",
-    "There are a few ways to check if and what AOP data have been updated since you last downloaded the data, both on the website, and programmatically using functionality built into the AOP download functions. On the website, you can check the issue logs and their resolution, and you can also check the Release pages for a complete summary of what has been changed between the past release and the current one; for example <a href=\"https://www.neonscience.org/data-samples/data-management/data-revisions-releases/release-2025\" target=\"_blank\">Release 2025</a>. This tutorial will demonstrate some of the programmitc options to check if published AOP data has been modified compared to your local version.\n",
+    "There are a few ways to check if and what AOP data have been updated since you last downloaded the data, both on the website, and programmatically using functionality built into the AOP download functions. On the website, you can check the Issue Log tables on each data product page and also see the Issue resolutions, and you can also check the Release pages for a complete summary of what has been changed between the past release and the current one; for example <a href=\"https://www.neonscience.org/data-samples/data-management/data-revisions-releases/release-2025\" target=\"_blank\">Release 2025</a>. This tutorial will demonstrate some of the programmatic options to check if published AOP data has been modified compared to your local version.\n",
     "\n",
     "\n",
     "<div id=\"ds-objectives\" markdown=\"1\">\n",
@@ -69,7 +69,7 @@
     "\n",
     "## Things You’ll Need To Complete This Tutorial\n",
     "\n",
-    "To complete this tutorial, you will need a version of Python (3.9 or higher), the latest Python neonutilities package (1.2 or higher) and, preferably, Jupyter Notebooks or Spyder installed on your computer. Much of the lesson can also be carried out in R using the R neonUtilities package; however some functionality is only available in Python.\n",
+    "To complete this tutorial, you will need a version of Python (3.9 or higher), the latest Python neonutilities package (1.2 or higher) and, preferably, Jupyter Notebooks or Spyder installed on your computer. Much of the lesson can also be carried out in R using the R neonUtilities package; however some of the functionality that is demonstrated is currently only available in Python.\n",
     "\n",
     "## Additional Resources\n",
     "\n",
@@ -82,7 +82,7 @@
     "\n",
     "## Import Required Packages\n",
     "\n",
-    "For this tutorial, we will mainly be exploring the three functions imported below in the `neonutilities` package that allow us to explore availability of and download AOP data."
+    "For this tutorial, we will mainly be exploring the functions imported below in the `neonutilities` package that allow us to explore availability of and download AOP data."
    ]
   },
   {
