change jpg to png

--- a/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
+++ b/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "<table><tr>\n",
     "<td> <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/aop-general/2023_tombstoned_aop_chm_screenshot.png\" width=\"350\"> </td>\n",
-    "<td> <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/aop-general/2023_aop_tombstone.jpg\" width=\"350\"> </td>\n",
+    "<td> <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/aop-general/2023_aop_tombstone.png\" width=\"350\"> </td>\n",
     "</table>\n",
     "<figcaption> AOP Data RELEASE-2032 Tombstone Page and Graphic (tombstone mock-up generated with https://mpaulweeks.github.io/tombstone/)</figcaption>\n",
     "\n",
