typo fix and add markdown

--- a/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
+++ b/tutorials/Python/AOP/General/aop-data-management/aop-data-management-releases.ipynb
@@ -46,7 +46,8 @@
     "<td> <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/aop-general/2023_tombstoned_aop_chm_screenshot.png\" width=\"350\"> </td>\n",
     "<td> <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/aop-general/2023_aop_tombstone.png\" width=\"350\"> </td>\n",
     "</table>\n",
-    "<figcaption> AOP Data RELEASE-2032 Tombstone Page and Graphic (tombstone mock-up generated with https://mpaulweeks.github.io/tombstone/)</figcaption>\n",
+    "<figcaption>AOP Data RELEASE-2023 Tombstone Page and Graphic (tombstone mock-up generated with <a href=\"https://mpaulweeks.github.io/tombstone/\" target=\"_blank\">https://mpaulweeks.github.io/tombstone/</a>)</figcaption>\n",
+    "\n",
     "\n",
     "Prior to each annual NEON Release, AOP scientists review the existing data and reprocess data if any issues are identified. Then they begin an approximately month-long transition period of replacing older files with newer ones. During this period, the current data release tag may no longer point to the same exact files for certain AOP data products that are undergoing updates. Although the data portal or API may indicate availability of a data product at specific sites for specific months, some files may be unavailable for few days (or longer) before being replaced by updated versions.\n",
     "\n",
@@ -74,7 +75,7 @@
     "\n",
     "## Additional Resources\n",
     "\n",
-    "* <a href=\"http://data.neonscience.org\" target=\"_blank\"> NEON Data Portal </a>\n",
+    "* <a href=\"http://data.neonscience.org\" target=\"_blank\">NEON Data Portal </a>\n",
     "* <a href=\"https://www.neonscience.org/data-samples/data-management/data-revisions-releases\" target=\"_blank\">Understanding Releases and Provisional Data</a>\n",
     "* <a href=\"https://www.neonscience.org/data-samples/data-management/data-revisions-releases\" target=\"_blank\">Data Product Revisions and Releases</a>\n",
     "* <a href=\"https://neon-utilities-python.readthedocs.io/en/stable/\" target=\"_blank\">neonutilities Read the Docs</a> \n",
@@ -95,7 +96,7 @@
    "source": [
     "import csv\n",
     "import os\n",
-    "from neonutilities import by_tile_aop, by_file_aop, list_available_dates, get_citation"
+    "from neonutilities import by_file_aop, list_available_dates, get_citation"
    ]
   },
   {
